--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Alvin Oktavianus (agentsam1995@gmail.com)",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-bundle-analyzer": "^0.1.2",
+    "@next/bundle-analyzer": "^9.0.3",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
@@ -22,6 +22,7 @@
     "next-redux-wrapper": "^3.0.0-alpha.3",
     "next-routes": "^1.4.2",
     "next-runtime-dotenv": "^1.2.0",
+    "next-server": "^9.0.3",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
